--- a/backend-proxy/nginx.conf
+++ b/backend-proxy/nginx.conf
@@ -15,7 +15,7 @@ http {
         listen       80;
         server_name  localhost;
 
-        location /v1/todo-api/ {
+        location /v1/todo-app/ {
             add_header Allow "GET, POST, HEAD" always;
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
@@ -32,7 +32,7 @@ http {
             proxy_set_header Access-Control-Allow-Headers Origin,Content-Type,Accept;
             proxy_pass      http://todo-app-internal-srvc:3003/api/;
             proxy_redirect off;
-            rewrite ^/api/todo-api(/.*)$ $1 break;
+            rewrite ^/api/todo-app(/.*)$ $1 break;
         }
 
         error_page   500 502 503 504  /50x.html;
