--- a/backend-proxy/kustomization.yaml
+++ b/backend-proxy/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 configMapGenerator:
-- name: nginx-conf
+- name: backend-proxy-conf
   files:
   - nginx.conf
 resources:
