--- a/backend-proxy/limits/limit.yaml
+++ b/backend-proxy/limits/limit.yaml
@@ -1,13 +1,13 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: lab-nginx
+  name: backend-proxy
 spec:
   replicas: 3
   template:
     spec:
       containers:
-      - name: lab-nginx
+      - name: backend-proxy
         resources:
           limits:
             memory: 128Mi
