--- a/backend/limits/limit.yaml
+++ b/backend/limits/limit.yaml
@@ -1,13 +1,13 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: todo-app
+  name: todo-api
 spec:
   replicas: 3
   template:
     spec:
       containers:
-      - name: todo-app
+      - name: todo-api
         resources:
           limits:
             memory: 128Mi
