--- a/backend/resources/service.external.yaml
+++ b/backend/resources/service.external.yaml
@@ -1,9 +1,9 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: todo-app-external-srvc
+  name: todo-api-external-srvc
   labels:
-    app: todo-app
+    app: todo-api
 spec:
   ports:
     - protocol: TCP
@@ -11,6 +11,6 @@ spec:
       targetPort: 3003
       nodePort: 30003
   selector:
-    app: todo-app
+    app: todo-api
   type: NodePort
   externalTrafficPolicy: Cluster
