--- a/source-files/backend/package.json
+++ b/source-files/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "pm2": "pm2",
-    "production": "pm2 start src/loader.js --name todo-app"
+    "production": "pm2 start src/loader.js --name todo-api"
   },
   "keywords": [],
   "author": "",
