--- a/mongo-express/deployment.template.yaml
+++ b/mongo-express/deployment.template.yaml
@@ -15,10 +15,10 @@ spec:
         app: mongo-express
     spec:
       containers:
-      - name: nginx
+      - name: mongo-express
         env:
         - name: ME_CONFIG_MONGODB_SERVER
-          value: lab-mongodb-replicaset-0.lab-mongodb-replicaset.default.svc.cluster.local,lab-mongodb-replicaset-1.lab-mongodb-replicaset.default.svc.cluster.local,lab-mongodb-replicaset-2.lab-mongodb-replicaset.default.svc.cluster.local
+          value: {{HOSTS_LIST}}
         image: mongo-express:0.49.0
         ports:
         - containerPort: 8081
