--- a/source-files/frontend/Dockerfile
+++ b/source-files/frontend/Dockerfile
@@ -1,13 +1,10 @@
-FROM alpine:3.7 AS SystemOS
-RUN apk update \
-	&& apk add --update nodejs nodejs-npm \
-    && npm install pm2 -g \
-    && apk add --update bash && rm -rf /var/cache/apk/*
+FROM node AS SystemOS
+RUN  npm install pm2 -g 
 
 FROM SystemOS as build
 COPY ./ /app-build
 WORKDIR /app-build
-RUN npm i
+RUN npm i  --legacy-peer-deps
 RUN npm run production
 
 FROM nginx:1.17.4
