--- a/mongodb/service.yaml
+++ b/mongodb/service.yaml
@@ -1,14 +1,14 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: backend-api-internal-srvc
+  name: mongodb-svc
   labels:
-    app: backend-api
+    app: mongodb
 spec:
   ports:
     - protocol: TCP
-      port: 3003
+      port: 27017
   selector:
-    app: backend-api
+    app: mongodb
   clusterIP: None
   type: ClusterIP
