--- a/source-files/backend/Dockerfile
+++ b/source-files/backend/Dockerfile
@@ -1,8 +1,5 @@
-FROM alpine:3.7 AS SystemOS
-RUN apk update \
-	&& apk add --update nodejs nodejs-npm \
-    && npm install pm2 -g \
-    && apk add --update bash && rm -rf /var/cache/apk/*
+FROM node AS SystemOS
+RUN npm install pm2 -g 
 
 FROM SystemOS
 COPY ./ /app-build
